--- a/general.scss
+++ b/general.scss
@@ -197,3 +197,45 @@ body{
         }
     }   
 }
+%search{
+    .search {
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+        border-radius: 4px;
+        border: none;
+        padding: 10px calcFluid(10, 50, 1024, 1920) 10px 4px;
+        background-color: white;
+        color: #6d6d6d;
+        font-weight: 100;
+        font-size: 20px;
+        outline: none;
+        width: calcFluid(200, 300, 1024, 1920);
+    }
+    .search__block{
+        display: none;
+        z-index: 20;
+        position: absolute;
+        @extend %d-col;
+        top: 50px;
+        width: 100%;
+        background-color: white;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+        a{
+            text-decoration: none;
+            color: black;
+            font-size: calcFluid(13, 15, 1024, 1920);
+            padding: 7px 10px;
+            font-weight: 100;
+            background-color: white;
+            &:hover{
+                background-color: #eeeeee;
+            }
+        }
+    }
+    img {
+        position: absolute;
+        right: 10px;
+        top: 8px;
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
