--- a/katalog/katalog.scss
+++ b/katalog/katalog.scss
@@ -172,7 +172,7 @@ main{
             }
 
         }
-        .katalog__slider{
+        .katalog-line{
             width: 80%;
             @extend %d-row;
             flex-wrap: wrap;
